# optimat

./: README.md  pyproject.toml
dev_data/: input_test.yml
diagrams/: optimat.drawio
notebooks/: test_config_parsing.ipynb
scripts/legacy/: full_script_functions.py  nbnw_full_script_multiphase_working_251218.py
src/optimat/: __init__.py  cli.py  results.py
src/optimat/backends/: __init__.py
src/optimat/backends/exact/: __init__.py  compile.py  solver.py
src/optimat/compile/: __init__.py  bqm.py  cpsat.py
src/optimat/config/: __init__.py  io.py  schema.py  validate.py
src/optimat/decode/: __init__.py  decode.py
src/optimat/energy/: __init__.py  buckingham.py  compile.py  ewald.py  terms.py
src/optimat/io/: __init__.py  json.py  yaml.py
src/optimat/mapping/: __init__.py  varmap.py
src/optimat/problem/: __init__.py  build.py  canonical.py
src/optimat/solve/: __init__.py  cpsat.py  neal.py
src/optimat/spec/: __init__.py  constraints.py  objective.py  problem.py
src/optimat/structures/: __init__.py  load.py
src/optimat/terms/: __init__.py  base.py  pairlist.py
src/optimat/util/: __init__.py  paths.py
tests/: test_build_problem.py  test_energy_compile.py  test_exact_backend.py  test_imports.py  test_read_yaml.py
